--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,106 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Manager01</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Bootstrap, from Twitter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<%= yield %>
+    <!-- Le styles -->
+    <%= stylesheet_link_tag    "bootstrap.css" %>
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+    <%= stylesheet_link_tag    "bootstrap-responsive.css" %>
 
-</body>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+
+	<!-- Navigation Bar -->
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Annuaire des Anciens</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Accueil</a></li>
+              <li><a href="http://anciens.polytech.unice.fr/">Site des Anciens</a></li>
+              <li><a href="http://www.polytech.unice.fr/">Polytech Nice Sophia</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+            
+            <% if user_signed_in? -%>
+	            <div class="pull-right btn-group">
+					<a class="btn btn-info" href="#"><% if current_user.graduate != nil -%><%= current_user.graduate.firstname %>&nbsp;<%= current_user.graduate.lastname %><% else -%><%= current_user.login %><% end -%></a>
+					<a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#">
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><%= link_to('Se déconnecter', destroy_user_session_path) %></li>
+					</ul>
+				</div>
+				<p class="navbar-text pull-right">
+					Connecté en tant que&nbsp;
+	            </p>
+            <% end -%>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+	<!-- Main content -->
+    <div class="container">
+    	<%= yield %>
+    	
+      <hr>
+
+      <footer>
+        <p>&copy; Amicale des Anciens de Polytech Nice Sophia / 2011<% todayDate = Date.today; if(todayDate.year > 2011) -%> - <%= todayDate.year %><% end -%></p>
+      </footer>
+
+    </div><!--/.fluid-container-->
+    
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- %= javascript_include_tag    "application.js" % -->
+    <%= javascript_include_tag    "jquery.js" %>
+    <%= javascript_include_tag    "bootstrap-alert.js" %>
+    <%= javascript_include_tag    "bootstrap-modal.js" %>
+    <%= javascript_include_tag    "bootstrap-dropdown.js" %>
+    <%= javascript_include_tag    "bootstrap-scrollspy.js" %>
+    <%= javascript_include_tag    "bootstrap-tab.js" %>
+    <%= javascript_include_tag "bootstrap-tooltip.js" %>
+    <%= javascript_include_tag "bootstrap-popover.js" %>
+    <%= javascript_include_tag "bootstrap-button.js" %>
+    <%= javascript_include_tag "bootstrap-collapse.js" %>
+    <%= javascript_include_tag "bootstrap-carousel.js" %>
+    <%= javascript_include_tag "bootstrap-typeahead.js" %>
+
+  </body>
 </html>
